@@ -4,10 +4,10 @@ dnl Set release number
 PACKAGE=libhdate
 LIBHDATE_MAJOR_VERSION=1
 LIBHDATE_MINOR_VERSION=4
-LIBHDATE_MICRO_VERSION=1
+LIBHDATE_MICRO_VERSION=2
 
 VERSION=$LIBHDATE_MAJOR_VERSION.$LIBHDATE_MINOR_VERSION.$LIBHDATE_MICRO_VERSION
-VERSION_INFO=$LIBHDATE_MAJOR_VERSION:$LIBHDATE_MINOR_VERSION:$LIBHDATE_MICRO_VERSION
+VERSION_INFO=$LIBHDATE_MAJOR_VERSION:$LIBHDATE_MINOR_VERSION:0
 
 AC_SUBST(VERSION_INFO)
 
@@ -51,6 +51,7 @@ else
 	PA_TPR=`fpc -iTP`
 	PA_TOS=`fpc -iTO`
 	PA_MODULES_PATH="/usr/lib/fpc/$PA_VERSION/units/$PA_TPR-$PA_TOS"
+	AC_SUBST([PA_VERSION])
 	AC_SUBST([PA_MODULES_PATH])
 fi
 
@@ -80,6 +81,7 @@ if test "x$have_python" = "xyes"; then
 		    PY_MODULES_PATH=$with_python_sitelib_dir
 		  fi
 		  
+		  AC_SUBST([PY_VERSION])
 		  AC_SUBST([PY_CFLAGS])
 		  AC_SUBST([PY_MODULES_PATH])
 		  if test "x$have_swig" = "xno"; then
