@@ -1,5 +1,5 @@
 
 EXTRA_DIST = hdate_cpp.cpp hdate_python.py hdate_perl.pl hdate_pascal.pp
 
-libhdatedocdir = ${prefix}/share/doc/libhdate0/examples/bindings
+libhdatedocdir = ${prefix}/share/doc/libhdate/examples/bindings
 libhdatedoc_DATA = hdate_cpp.cpp hdate_python.py hdate_perl.pl hdate_pascal.pp
