@@ -1,3 +1,6 @@
+25/11/2005 
+  - Added some constants and fixed comments according the orginal API file
+
 27/05/2005
 	- Created a Changelog.
 
